fixed problem with overflow hidden in images

--- a/config/main.css
+++ b/config/main.css
@@ -173,7 +173,6 @@ html{
   -moz-border-radius: 10px;
   padding: 3px;
   margin: 2px;
-  overflow: hidden;
 }
 
 #tags .tag .go {
@@ -183,6 +182,10 @@ html{
 
 #tags .filter {
   background-color: #tags-filter#;
+}
+
+#tags .textual {
+  overflow: hidden;
 }
 
 /* TODO: analyse */
